# GFC-Scraper

./: README.md  main.py  pyproject.toml
